fix wrong padding and position

--- a/resources/extensions/VisualEditor.core.less
+++ b/resources/extensions/VisualEditor.core.less
@@ -7,7 +7,7 @@
 		}
 
 		.ve-ui-toolbar-floating > .oo-ui-toolbar-bar {
-			top: @fixed-header-height + @color-height;
+			top: @fixed-header-height;
 		}
 
 		// Make the gutter area clickable (T162838)
@@ -16,7 +16,7 @@
 		// 	margin-right: -@content-padding;
 		// }
 
-		.ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface .ve-ce-documentNode,
+		// .ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface .ve-ce-documentNode,
 		.ve-init-mw-desktopArticleTarget .ve-init-mw-target-surface .ve-ui-surface-placeholder {
 			padding-left: @content-padding;
 			padding-right: @content-padding;
